 cnp-allow-only-kibana-elastic-connections-ie38277.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-only-kibana-elastic-connections-ni86agg
  namespace: kube-system
spec:
  description: "Allow kibana to only connect to elastic search"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  egress:
  - toEndpoints:
    - matchLabels:
        app: elasticsearch
